פלפלים קלויים ועוד שינויים קלים

--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@ Error message and password prompt
 
 <li>פיליפ</li>
 
+<li>פלפלים קלויים</li>
+
 <li>פפינה</li>
 
 <li>צ'ן</li>
@@ -430,6 +432,8 @@ Error message and password prompt
 <li>שרלה הייתה אוהבת את זה</li>
 
 <li>תומר</li>
+
+<li>תיקי גב לקניות שדןדן ויויו הכינו</li>
 
 <li>תפוחי אדמה ובטטות בתנור</li>
 
@@ -8245,7 +8249,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[פלפלים קלויים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פלפלים קלויים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9305,13 +9309,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170402140910735" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170405154202331" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
 !!![[גורה]]:
 
 טוב, בינתיים ממש לא כולם אבל אני בדרך לשם, וכידוע, הדרך היא החשובה.
+
+ואגב דרך, [[יויו]] ו[[דןדן]], הכינו [[תיקי גב|תיקי גב לקניות שדןדן ויויו הכינו]]. הם מצויינים לקניות שקודמות להכנת האוכל.
 
 
 
@@ -9320,36 +9326,36 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[אורז לבן עם צנוברים]] - גורה ואירי 
 * [[מג'דרה]] - גורה ואירי 
 * [[תפוחי אדמה ובטטות בתנור]] - גורה ואירי 
-* [[פלפלים קלויים]] - אווה 
-* [[סלט עדשים עם כוסברה ובצל קצוץ]] - אווה
-* [[סלט עגבניות עם שום]] - אווה
-* [[שעועית ירוקה בחמאה ושום]]  - אווה
-* [[סלק מבושל]] - אווה  
-* [[אספרגוס]] - אווה 
-* [[סלט חסה]] - יויו 
-* [[סלט מלפפונים עם בצל סגול וכוסברה]] - יויו 
-* [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
-* [[עוגיות קימל]] - אווה 
-* [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
-* [[מלפפונים חמוצים]] - אלפרד 
-* [[גרטן תפו&quot;א]] - דניאל  
-* [[פחזניות ממולאות בכבד קצוץ]] - אנג'ליק 
-* [[צנצנת עם חזרת]] - אנג'ליק
-* [[צלי בשר עם תפוחי אדמה]] - סוניה
-* [[חמוצים סיניים]] - גואן יין
-* [[תרנגול הודו אפוי]] - ז'נבייב
-* [[קוסקוס]] - ז'נבייב 
-* [[לזניה צמחונית]]  
+* [[פלפלים קלויים]]- אווה 
+* סלט עדשים עם כוסברה ובצל קצוץ - אווה
+* סלט עגבניות עם שום - אווה
+* שעועית ירוקה בחמאה ושום  - אווה
+* סלק מבושל - אווה  
+* אספרגוס - אווה 
+* סלט חסה - יויו 
+* סלט מלפפונים עם בצל סגול וכוסברה - יויו 
+* טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן - אווה 
+* עוגיות קימל - אווה 
+* תבשיל שורשים ואורז בשלושה צבעים -  אלפרד 
+* מלפפונים חמוצים - אלפרד 
+* גרטן תפו&quot;א - דניאל  
+* פחזניות ממולאות בכבד קצוץ - אנג'ליק 
+* צנצנת עם חזרת - אנג'ליק
+* צלי בשר עם תפוחי אדמה - סוניה
+* חמוצים סיניים - גואן יין
+* תרנגול הודו אפוי - ז'נבייב
+*קוסקוס - ז'נבייב 
+* לזניה צמחונית  
 * [[סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] - אנה
-* [[עיגולי מרציפן]] - ז'נבייב 
+* עיגולי מרציפן - ז'נבייב 
 
-* [[פבלובה]] - פיליפ
-* [[פאי דובדבנים]] - אווה
-* [[פאי פקאן עם קרמל]] 
-* [[פאי אגסים עם קרם גבינה ושקדים]] - אווה
-* [[עוגת מוקה]] - אווה
-* [[פנטונה]] - סוניה 
-* [[ריגו יאנצ'י]] - סוניה     
+* פבלובה - פיליפ
+* פאי דובדבנים - אווה
+* פאי פקאן עם קרמל 
+* פאי אגסים עם קרם גבינה ושקדים - אווה
+* עוגת מוקה - אווה
+* פנטונה - סוניה 
+* ריגו יאנצ'י - סוניה     
 
 </pre>
 </div>
@@ -9423,7 +9429,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114202954459" modified="20170401170034262" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20170405134607443" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אוה]]:
@@ -9432,7 +9438,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[כל המתכונים של ארוחת הכריסמס]]
 
-[[דןדן]] ו[[יויו]] חזרו מהשוק והמשכנו בהכנות לערב. יויו שלף בגאווה מתיק הגב חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי לאפות. [[אירי]] התייצבה לידי ורצתה לדעת ולעשות אתי כל דבר. הכנו פאי דובדבנים, פאי פקאן עם קרמל ופאי אגסים עם קרם גבינה ושקדים. יויו הכין מרק כתום בסיר גדול ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. [[גורה]] ואירי הכינו אורז לבן עם צנוברים, מג'דרה, תפוחי אדמה ובטטות בתנור, פלפלים קלויים, סלט עדשים עם כוסברה ובצל קצוץ וסלט עגבניות עם שום. שתינו בירות ועשנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי שעועית ירוקה בחמאה ושום וסלק מבושל ואת האספרגוס. יויו הכין סלט חסה וסלט מלפפונים עם בצל סגול וכוסברה. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פרקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופזרו שתי כפות סוכר, ערבבו ופזרו אגוזי מלך קלויים. על משטח העבודה הבנים סידרו את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי טוסטים עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את עוגיות הקימל. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם אלבום של [[fela kuti|https://en.wikipedia.org/wiki/Fela_Kuti]]. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרביונים חומים, ואת עגילי הזהב התלויים הקבועים שלי אותם רכשתי לפני כמה שנים בחנות תכשיטים ליד השוק, בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. דןדן מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, גורה בחצאית כפלים מעל הברכיים בוורוד בהיר וגרביים גבוהות לבנות עד מעל לברכיים עליהן הדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. אירי בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה, ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. יויו דןדן וגורה מיד רצו לדלת. בדלת עמדו, [[אלפרד]] מחייך עם בובת סנטה קלאוס ענקית ביד שמאל וביד ימין אחז תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים. [[ג'וזף]] עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופרות יבשים. איתם [[דניאל]], בחור רזה בגובה בינוני, שמרכיב משקפי מתכת וחייכן. שיערו שחור ומסופר בתספורת קצרה חתוכה היטב, בידיו גרטן תפו&quot;א ויין ומאחור [[אנג'ליק]]. ג'ינג'ית יפה עם שער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית עם פחזניות ממולאות בכבד קצוץ, צנצנת עם חזרת, שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכל הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם [[סוניה]] ובעלה [[מרק]] הגיעו. סוניה לבושה שחור ושערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מידי. הם הביאו צלי בשר עם תפוחי אדמה, פנהטונה וריגו יאנצ'י. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. &quot;תודה רבה&quot;, הוא אמר לו, &quot;אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון&quot;. &quot;אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית&quot;, מרק ענה. בשמונה ורבע חמשת הסינים הגיעו ואחד מהם הביא אתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה אודות עובדי בניין סיניים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין, וגם לחמים וגבינות. גואן-יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] ו[[ראשל]]. היא הביאה תרנגול הודו אפוי, קוסקוס שיויו התחנן שתביא למרות הכול ועיגולי מרציפן. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד שציפו להכיר והתחברו אליו מיד. רוז'ה הגיע עם לזניה צמחונית וזר פרחים, וחברתו אנה שהביאה סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
+[[דןדן]] ו[[יויו]] חזרו מהשוק והמשכנו בהכנות לערב. יויו שולף בגאווה [[מתיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי לאפות. [[אירי]] התייצבה לידי ורצתה לדעת ולעשות אתי כל דבר. הכנו פאי דובדבנים, פאי פקאן עם קרמל ופאי אגסים עם קרם גבינה ושקדים. יויו הכין מרק כתום בסיר גדול ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. [[גורה]] ואירי הכינו אורז לבן עם צנוברים, מג'דרה, תפוחי אדמה ובטטות בתנור, פלפלים קלויים, סלט עדשים עם כוסברה ובצל קצוץ וסלט עגבניות עם שום. שתינו בירות ועשנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי שעועית ירוקה בחמאה ושום וסלק מבושל ואת האספרגוס. יויו הכין סלט חסה וסלט מלפפונים עם בצל סגול וכוסברה. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פרקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופזרו שתי כפות סוכר, ערבבו ופזרו אגוזי מלך קלויים. על משטח העבודה הבנים סידרו את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי טוסטים עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את עוגיות הקימל. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם אלבום של [[fela kuti|https://en.wikipedia.org/wiki/Fela_Kuti]]. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרביונים חומים, ואת עגילי הזהב התלויים הקבועים שלי אותם רכשתי לפני כמה שנים בחנות תכשיטים ליד השוק, בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. דןדן מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, גורה בחצאית כפלים מעל הברכיים בוורוד בהיר וגרביים גבוהות לבנות עד מעל לברכיים עליהן הדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. אירי בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה, ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. יויו דןדן וגורה מיד רצו לדלת. בדלת עמדו, [[אלפרד]] מחייך עם בובת סנטה קלאוס ענקית ביד שמאל וביד ימין אחז תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים. [[ג'וזף]] עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופרות יבשים. איתם [[דניאל]], בחור רזה בגובה בינוני, שמרכיב משקפי מתכת וחייכן. שיערו שחור ומסופר בתספורת קצרה חתוכה היטב, בידיו גרטן תפו&quot;א ויין ומאחור [[אנג'ליק]]. ג'ינג'ית יפה עם שער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית עם פחזניות ממולאות בכבד קצוץ, צנצנת עם חזרת, שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכל הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם [[סוניה]] ובעלה [[מרק]] הגיעו. סוניה לבושה שחור ושערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מידי. הם הביאו צלי בשר עם תפוחי אדמה, פנהטונה וריגו יאנצ'י. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. &quot;תודה רבה&quot;, הוא אמר לו, &quot;אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון&quot;. &quot;אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית&quot;, מרק ענה. בשמונה ורבע חמשת הסינים הגיעו ואחד מהם הביא אתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה אודות עובדי בניין סיניים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין, וגם לחמים וגבינות. גואן-יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] ו[[ראשל]]. היא הביאה תרנגול הודו אפוי, קוסקוס שיויו התחנן שתביא למרות הכול ועיגולי מרציפן. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד שציפו להכיר והתחברו אליו מיד. רוז'ה הגיע עם לזניה צמחונית וזר פרחים, וחברתו אנה שהביאה סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
 כבר היה רבע לתשע. דןדן ואני שטפנו את הכלים שהיו בכיור.
 &quot;כולם כאן חוץ מהדוקטור&quot;. יויו אמר בקול ובו ברגע נשמע צלצול בדלת. סיימנו לשטוף את הכלים שנינו. מזגנו לעצמנו בחרובקה והקשנו כוס לכוס. 
 בלגימה אני שומעת קול קורא, &quot;אווה&quot;. אני בולעת את המשקה, לא בטוחה למשמע הקול. אני מסיימת את הבליעה ומרימה את הראש, זה [[פיליפ]]. ראשו מוטה אלי, רעמתו נשואה לאחור, ידיו מופנות לפנים בלי תנועה, פניו אדומים. &quot;אווה&quot; הוא שוב אומר בקול, מניע את ידיו והולך לקראתי. כמעט נפלתי אבל דןדן החזיק אותי. &quot;פיליפ&quot;, אמרתי בלי קול. הוא הגיע עד אלי והושיט לי את ידיו. לא הצלחתי לזוז. יויו ואירי באו גם הם להחזיק אותי.
@@ -9773,6 +9779,22 @@ __אופן ההכנה____
 
 היום, כידוע, [[אנחנו|האחיות כהן]] משפחה אחת גדולה ושמחה.
 
+</pre>
+</div>
+<div created="20170405154213420" modified="20170405160316497" title="פלפלים קלויים">
+<pre>[img[pictures/pilpelim.jpg]]
+
+!!![[אווה]]:
+
+* מרפדים תבנית גדולה בנייר אפייה, ומניחים עליו כמה פלפלים שרוצים, ומכניסים לתנור מחומם ל 190 מעלות צלזיוס.
+* ם קולים אותם עד שהם משחימים מכל הצדדים וחלקים מהקליפה ניתקים ממנה.
+* לאחר שהפלפלים קלויים משאירים אותם בתנור עד שהם מגיעים לטמפרטורת החדר.
+* מוציאים אותם מן התנור, מושכים לכל אחד מהם את הראש ומסננים את המיץ שיש בתוך כל פלפל לקערה קטנה.
+* קולפים שיני שום לפי הטעם.
+* מקלפים את הפלפלים מהקליפה שלהם, חותכים אותם לרצועות ומסדרים על צלחת.
+* מפזרים פרוסות שיני שום
+* מוזגים לתוך מיץ הפלפלים כמות זהה של שמן זית, מערבבים ומוזגים מעל הפלפלים.
+* אפשר להגיש מיד או לתת לזה לעמוד, או לאפסן ולהגיש גם כמה ימים לאחר ההכנה.
 </pre>
 </div>
 <div created="20170125155935412" modified="20170125170002675" title="פפינה">
@@ -10180,10 +10202,23 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170404162732372" modified="20170404203658838" tags="[[מתכוני ארוחת הכריסמס]]" title="תפוחי אדמה ובטטות בתנור">
-<pre>
+<div created="20170405141252134" modified="20170405142919518" title="תיקי גב לקניות שדןדן ויויו הכינו">
+<pre>[img[pictures/tik-kniyot.jpg]]
 
-[img[pictures/batatot-batanoor.jpg]]
+!!![[גורה]]:
+
+מאחר שאחד עיסוקיו המרכזיים של יויו הוא הליכה  לקניות בשוק, הוא החליט שהוא רוצה לבנות תיק גב נח.
+
+זה היה קצת אחרי שעברנו [[לדירה|הדירה]], וכמה חודשים לפני [[שדןןדןן נסע|דןדן נסע]].
+
+הם קנו מוטות אלומיניות מתכווננים, חלקם עם זוויות, ובנו &quot;קופסה&quot;. הם קנו חתיכות [[ברזנט|https://he.wiktionary.org/wiki/%D7%91%D7%A8%D7%96%D7%A0%D7%98]], רצועות ואבזמים מתכווננים.
+
+את ה&quot;קופסה&quot;, הברזנט, הרצועות והאבזמים, הם לקחו לתופרת, שחיברה לפי בקשתם את הכל. התיקים כוללים מחיצה במרכז התיק. כיס פנימי, כיס קידמי וכיס צדדי קטן ומאובטח.
+
+</pre>
+</div>
+<div created="20170404162732372" modified="20170404203658838" tags="[[מתכוני ארוחת הכריסמס]]" title="תפוחי אדמה ובטטות בתנור">
+<pre>[img[pictures/batatot-batanoor.jpg]]
 
 !!![[אירי]]:
 
