--- a/index.html
+++ b/index.html
@@ -9781,7 +9781,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170405154213420" modified="20170405160316497" title="פלפלים קלויים">
+<div created="20170405154213420" modified="20170405160619558" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
 
 !!![[אווה]]:
