--- a/index.html
+++ b/index.html
@@ -379,6 +379,8 @@ Error message and password prompt
 
 <li>סטלין</li>
 
+<li>סלט עדשים עם כוסברה ובצל קצוץ</li>
+
 <li>סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום</li>
 
 <li>עורכת הדין</li>
@@ -8249,7 +8251,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פלפלים קלויים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סלט עדשים עם כוסברה ובצל קצוץ]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9309,7 +9311,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170405154202331" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170405180124443" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9327,7 +9329,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[מג'דרה]] - גורה ואירי 
 * [[תפוחי אדמה ובטטות בתנור]] - גורה ואירי 
 * [[פלפלים קלויים]]- אווה 
-* סלט עדשים עם כוסברה ובצל קצוץ - אווה
+* [[סלט עדשים עם כוסברה ובצל קצוץ]] - אווה
 * סלט עגבניות עם שום - אווה
 * שעועית ירוקה בחמאה ושום  - אווה
 * סלק מבושל - אווה  
@@ -9622,6 +9624,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
+<div created="20170405181303189" modified="20170405184920868" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט עדשים עם כוסברה ובצל קצוץ">
+<pre>
+[img[pictures/salat-adashim.jpg]]
+
+!!![[אווה]]:
+
+* מבשלים כוס עדשים חומות עד להתרככות. (20-30 דקות)
+* קוצצים בצל סגול בינוני
+* קוצצים שני חופנים של כוסברה
+* מסננים את העדשים המבושלות
+* בתוך קערה מערבבים את העדשים המסוננות, הבצל הקצוץ והכוסברה.
+* מתבלים בשמן זית, מיץ מחצי לימון בסחוט ומלח ים גס.
+* אפשר להגיש מיד או מאוחר יותר או לאפסן במקרר ולשמור כמה עד ארבעה ימים.</pre>
+</div>
 <div created="20161115212458524" modified="20170404203928325" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
 <pre>[img[pictures/yBdpK1g4nA5g7Cp0.jpg]]
 
@@ -9781,19 +9797,20 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170405154213420" modified="20170405160619558" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
+<div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
 <pre>[img[pictures/pilpelim.jpg]]
 
 !!![[אווה]]:
 
 * מרפדים תבנית גדולה בנייר אפייה, ומניחים עליו כמה פלפלים שרוצים, ומכניסים לתנור מחומם ל 190 מעלות צלזיוס.
-* ם קולים אותם עד שהם משחימים מכל הצדדים וחלקים מהקליפה ניתקים ממנה.
+* קולים אותם עד שהם משחימים מכל הצדדים וחלקים מהקליפה ניתקים ממנה.
 * לאחר שהפלפלים קלויים משאירים אותם בתנור עד שהם מגיעים לטמפרטורת החדר.
 * מוציאים אותם מן התנור, מושכים לכל אחד מהם את הראש ומסננים את המיץ שיש בתוך כל פלפל לקערה קטנה.
-* קולפים שיני שום לפי הטעם.
+* קולפים שיני שום לפי הטעם ופורסים אותם לפרוסות קטנות.
 * מקלפים את הפלפלים מהקליפה שלהם, חותכים אותם לרצועות ומסדרים על צלחת.
 * מפזרים פרוסות שיני שום
 * מוזגים לתוך מיץ הפלפלים כמות זהה של שמן זית, מערבבים ומוזגים מעל הפלפלים.
+* מפזרים מלח קורט מלח ים גס.
 * אפשר להגיש מיד או לתת לזה לעמוד, או לאפסן ולהגיש גם כמה ימים לאחר ההכנה.
 </pre>
 </div>
