Add feed generator
No docs until we figure it out on Windows

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ DAMAGE.
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
-
+<link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
