--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING 
 ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 DAMAGE.
 " />
-<link id="faviconLink" rel="shortcut icon" href="favicon.ico">
+<link id="faviconLink" rel="shortcut icon" href="pictures/logo.png">
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
