--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING 
 ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 DAMAGE.
 " />
-<link id="faviconLink" rel="shortcut icon" href="pictures/logo.png">
+<link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
-<link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
+
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -8227,7 +8227,7 @@ Error message and password prompt
 <div created="20161023183206341" modified="20161023183206341" title="$:/state/Link/-1328864002/search">
 <pre>http://legalize.org.il/download/cop-vox/</pre>
 </div>
-<div created="20161023182522696" modified="20161221210246339" title="$:/state/showeditpreview">
+<div created="20161023182522696" modified="20170406173654000" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
 <div created="20161024052836465" modified="20161024094639906" title="$:/state/sidebar">
@@ -8257,7 +8257,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מחפשת את אירי]] אירי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9797,16 +9797,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170406164152446" modified="20170406164230728" title="מחפשת את אירי">
-<pre>
-
-
-
+<div created="20170406164152446" modified="20170406174639244" title="מחפשת את אירי">
+<pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
 מחפשת את אירי
 
 (גורה כותבת)
+
 
 אירי
 אירי כבר שכבה כמה שעות טובות על המיטה ללא כל תזוזה, כשלפתע יד נעלמה ענקית אחזה בבד כותונת הלילה המהוהה שלבשה והרימה אותה מן המיטה תלויה. ידיה ורגליה שמוטות. ראשה שמוט. שדיה שמוטים יוצאים מצדי הכותונת שאת שרווליה הארוכים גזרה ביום קיץ חם. היד הנעלמה משכה אותה דרך התקרה. אירי ניסתה לצרוח, אך יד ענקית שנייה סתמה את פיה בעדינות וקול היסוי נשמע. עיניה היו עצומות בחוזקה, ולרגע קט שבו פקחה אותן יכלה לראות איך תקרת ביתה נסגרת ואיך היא ממשיכה להילקח דרומה ומזרחה. היא חזרה לעצום את עיניה, לא מעזה להזיז שום חלק מגופה. 
@@ -10288,6 +10286,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 זכיתי למחמאות על המילים הללו. היה לי חשוב להגיד משהו אחרי השנה הזו ואף אמרתי. בשנתיים האחרונות יויו ואני הרחבנו את המשפחה שלנו, היה לנו סניף צרפתי ענף. ז'נבייב וג'וזף נסעו כעבור שבוע. שבועיים מאוחר יותר יויו, דןדן ואני חזרנו לפריז. אירי נשארה כאן בארץ. היא החליטה ללמוד ברצינות אלכסנדר אחרי שתעשה השלמות לסיום התואר בסמינר, ועם זה החליטה להצטרף אל דןדן ואלי. דןדן ואני החלטנו לנסוע לכמה חודשים להודו לא לפני שנחזור להתרווח מעט בפריז וליהנות זה מזה. ביקשנו מאירי שתבוא אלינו לביקור. כנראה ארנון והיא יגיעו בפר נואל וגם אווה והבת שלה. אחרי השנתיים האחרונות היינו זקוקים עוד אלה לאלה. 
 
 סוף
+
+
 
 
 
