--- a/index.html
+++ b/index.html
@@ -437,6 +437,8 @@ Error message and password prompt
 
 <li>שלח</li>
 
+<li>שעועית ירוקה בחמאה ושום</li>
+
 <li>שרלה הייתה אוהבת את זה</li>
 
 <li>תומר</li>
@@ -8257,7 +8259,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מחפשת את אירי]] אירי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[שעועית ירוקה בחמאה ושום]] [[מחפשת את אירי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9628,7 +9630,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170406145812187" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170406184517139" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9648,7 +9650,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[פלפלים קלויים]]- אווה 
 * [[סלט עדשים עם כוסברה ובצל קצוץ]] - אווה
 * [[סלט עגבניות עם שום]] - אווה
-* שעועית ירוקה בחמאה ושום  - אווה
+* [[שעועית ירוקה בחמאה ושום]]  - אווה
 * סלק מבושל - אווה  
 * אספרגוס - אווה 
 * סלט חסה - יויו 
@@ -9797,7 +9799,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170406164152446" modified="20170406174639244" title="מחפשת את אירי">
+<div created="20170406164152446" modified="20170406184447521" title="מחפשת את אירי">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
@@ -9806,7 +9808,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 (גורה כותבת)
 
 
-אירי
+
 אירי כבר שכבה כמה שעות טובות על המיטה ללא כל תזוזה, כשלפתע יד נעלמה ענקית אחזה בבד כותונת הלילה המהוהה שלבשה והרימה אותה מן המיטה תלויה. ידיה ורגליה שמוטות. ראשה שמוט. שדיה שמוטים יוצאים מצדי הכותונת שאת שרווליה הארוכים גזרה ביום קיץ חם. היד הנעלמה משכה אותה דרך התקרה. אירי ניסתה לצרוח, אך יד ענקית שנייה סתמה את פיה בעדינות וקול היסוי נשמע. עיניה היו עצומות בחוזקה, ולרגע קט שבו פקחה אותן יכלה לראות איך תקרת ביתה נסגרת ואיך היא ממשיכה להילקח דרומה ומזרחה. היא חזרה לעצום את עיניה, לא מעזה להזיז שום חלק מגופה. 
 כעשר דקות אחר כך היא הונחה על גג ברחוב הוברמן שליד היכל התרבות. מוזיקה עצומה וקולות של אנשים היו שם במלוא עוצמתם. 
 במשך כל זמן ה&quot;תעופה&quot; והרבה יותר מזה, מיד כששמעה את קולות האנשים, ראשה קדח מדאגה בנוגע להופעתה. איך תיראה כך ברבים. אפילו תחתונים אין לה. ולא חזייה. היד הניחה אותה בעדינות על מזרן שהיה על הגג שעליו הייתה כרית ענקית ורכה. היא כיווצה את עצמה לידי כדור ולא העזה ולו לרגע לפקוח אף לא אחת מעיניה שמא תראה שמביטים בגופה הנלעג. כך חשבה. לרגע קט פקחה עין ודחקה עצמה עמוק, מתכסה בחלק מהמזרן ובכרית. בחורה ענוגה שריח חתולים עלה ממנה התיישבה עליה מבלי משים, אוחזת בידה כוס פלסטיק עם יין ובשנייה תיק קטן וסיגריה.
@@ -10968,6 +10970,11 @@ Fapina''
 <pre>[img[pictures/CT2ku66Mqk7cBavl.JPG]]
 
 !![[הכל ייתברר]]</pre>
+</div>
+<div created="20170406190136484" modified="20170406190206828" title="שעועית ירוקה בחמאה ושום">
+<pre>[img[pictures/sheooit.jpg]]
+
+</pre>
 </div>
 <div created="20161113183624587" modified="20161118224539978" title="שרלה הייתה אוהבת את זה">
 <pre>[img[pictures/bEhhnCTBucJG9v6o.JPG]]
