--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ DAMAGE.
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <title>גנזך האחיות כהן — געזונט הייטס, קומה מינוס 1, אצל סטלין</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
-
+<link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -118,6 +118,8 @@ Error message and password prompt
 
 
 <p>This <a class="tc-tiddlylink-external" href="http://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
+
+<li>$:/afterhead</li>
 
 <li>$:/config/AutoSave</li>
 
@@ -471,6 +473,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20170406232944638" modified="20170407000310684" tags="$:/tags/RawMarkup" title="$:/afterhead" type="text/plain">
+<pre>&lt;link rel=&quot;alternate&quot; type=&quot;application/rss+xml&quot; title=&quot;האחיות כהן&quot; href=&quot;rss.xml&quot;&gt;</pre>
+</div>
 <div created="20161024120813016" modified="20161024120813016" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
@@ -8247,11 +8252,11 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170404191139238" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20170407000423221" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20161023184705203" modified="20170404202237179" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20161023184705203" modified="20170407000426011" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8259,7 +8264,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[שעועית ירוקה בחמאה ושום]] [[מחפשת את אירי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
