--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@ Error message and password prompt
 
 <li>אנט ג'מיימה</li>
 
+<li>אספרגוס</li>
+
 <li>ארוחת כריסמס</li>
 
 <li>אשת העסקים</li>
@@ -385,11 +387,15 @@ Error message and password prompt
 
 <li>סטלין</li>
 
+<li>סלט חסה</li>
+
 <li>סלט עגבניות עם שום</li>
 
 <li>סלט עדשים עם כוסברה ובצל קצוץ</li>
 
 <li>סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום</li>
+
+<li>סלק מבושל</li>
 
 <li>עורכת הדין</li>
 
@@ -8255,8 +8261,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170407000423221" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20161023184705203" modified="20170407000426011" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20161023184705203" modified="20170407113435620" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8264,7 +8270,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[סלט חסה]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8654,6 +8660,19 @@ Error message and password prompt
 
 
 </pre>
+</div>
+<div created="20170407125610504" modified="20170407130244169" title="אספרגוס">
+<pre>
+[img[pictures/asparagus.jpg]]
+
+!!![[אווה]]:
+
+* חולטים חבילת אספרגוס במים רותחים שלוש דקות.
+* מסננים ומייבשים.
+* מחממים מחבת כבדה, ומוסיפים לתוכה שתי כפות חמאה.
+* מטגנים בחמאה שתי שיני שום פרוסות.
+מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
+* בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
 <div created="20161112191527440" modified="20170401162621300" title="ארוחת כריסמס">
 <pre>[img[pictures/zVz8rufF4aR5GlBM.jpg]]
@@ -9635,7 +9654,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170406184517139" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170407130325995" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9656,9 +9675,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[סלט עדשים עם כוסברה ובצל קצוץ]] - אווה
 * [[סלט עגבניות עם שום]] - אווה
 * [[שעועית ירוקה בחמאה ושום]]  - אווה
-* סלק מבושל - אווה  
-* אספרגוס - אווה 
-* סלט חסה - יויו 
+* [[סלק מבושל]] - אווה  
+* [[אספרגוס]] - אווה 
+* [[סלט חסה]] - יויו 
 * סלט מלפפונים עם בצל סגול וכוסברה - יויו 
 * טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן - אווה 
 * עוגיות קימל - אווה 
@@ -10444,6 +10463,23 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
+<div created="20170407131936343" modified="20170407134650524" title="סלט חסה">
+<pre>
+[img[pictures/salat-chasa.jpg]]
+
+!!![[יויו]]:
+
+דבר ראשון חשובה החסה, שצריכה להיות טרייה, קשה ונקייה מכל מיני [[חילדון|http://www.ynet.co.il/yaan/0,7340,L-224500-PreYaan,00.html]].
+
+התחתית שלה צריכה להיות בהירה.
+
+מפרקים אותה, מעיפים את העלים הפחות מוצלחים, באם יש. שוטפים, מסננים ומייבשים.
+
+קורעים את העלים לחתיכות.
+
+מוזגים מעל שמן זית (כמה כפות), חומץ תפוחים (כפית) ומלח גס (קורט), מערבבים עם כפות הידיים בעדינות מהצדדים פנימה ומגישים.
+</pre>
+</div>
 <div created="20170406150319861" modified="20170406151310640" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
 
@@ -10493,6 +10529,22 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מניחים על פרוסות הסלק ערימה מהסלט, מפזרים מעל זרעי שומשום שחור, ומגישים.
 
 </pre>
+</div>
+<div created="20170407122044551" modified="20170407123359731" title="סלק מבושל">
+<pre>
+[img[pictures/selek.jpg]]
+
+!!![[אווה]]:
+
+שתי הערות לפני המתכון עצמו:
+1. ירק טוב, כדאי שיהיה צעיר, מתוח ובוהק.
+2. יש כל מיני דרכים לחתוך, כמו שאפשר להוסיף עשבי תיבול קצוצים ולהשתמש בעוד תבלינים. אני כתבתי את המתכון הפשוט כפי שהכנתי אותו לארוחת הכריסמס, שבה לא היה כל צורך בהעמסת מידע.
+
+* מבשלים שניים-שלושה סלקים עד שהם רכים, ונותנים להם להגיע לטמפרטורת החדר פלוס. (הפלוס, זה כי ככל שטמפרטורת הסלק תהיה חמה, כך שמן הזית והמלח הגס יתחברו אליו טוב יותר.)
+* כשהם חמימים קולפי אותם. (הרוב מתקלך כמעט מעצמו ככל שהסלק מבושל).
+* חותכים לפלחים.
+* יוצקים שמן זית ובוזקים מלח ים גס.
+* מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
 <div created="20170319172108447" modified="20170319172332136" title="עורכת הדין">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
@@ -10976,8 +11028,24 @@ Fapina''
 
 !![[הכל ייתברר]]</pre>
 </div>
-<div created="20170406190136484" modified="20170406190206828" title="שעועית ירוקה בחמאה ושום">
+<div created="20170406190136484" modified="20170407122332880" tags="[[מתכוני ארוחת הכריסמס]]" title="שעועית ירוקה בחמאה ושום">
 <pre>[img[pictures/sheooit.jpg]]
+
+!!![[אווה]]:
+
+כמה מילים לפני שאכתוב את המתכון עצמו.
+
+מבחינת כמויות, הכל תלוי בכמות הסועדים, מה עוד יש על השולחן ומה מרכז הארוחה.
+
+שעועית היא לבטח, לדעתי, תוספת. באם יש כמה תוספות, אזי לא נדרשת כמות גדולה מידי של כל אחת מן התוספות. 
+
+אני ממליצה לארוחה בינונית על שני חופני שעועית, אותם שוטפים היטב ואם צריך קוטמים את הקצוות.
+
+* חולטים את השעועית במים רותחים 5-10 דקות, תלוי בגודלן, מסננים ומייבשים.
+* במחבת ברזל ממיסים חמשים גרם חמאה ומטגנים את השום. (כדאי לתת למחבת להתחמם ורק אז להמיס את החמאה ומיד להניח את השום).
+* מוסיפים את השעועית וחופן שומשום, וצולים תוך כדי ערבוב עדין. (עדיפה כף עץ שטוחה).
+* מסירים מן האש ומגישים, וזה יכול להאכל גם בטמפרטורת החדר, ובמקרר להישמר עד שלושה ימים.
+
 
 </pre>
 </div>
