--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>סלט חסה</li>
 
+<li>סלט מלפפונים עם בצל סגול ושמיר</li>
+
 <li>סלט עגבניות עם שום</li>
 
 <li>סלט עדשים עם כוסברה ובצל קצוץ</li>
@@ -8270,7 +8272,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[סלט חסה]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[סלט מלפפונים עם בצל סגול וכוסברה]] [[סלט חסה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8290,8 +8292,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170406164248046" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170407140308996" title="$:/temp/search">
+<pre>סלט מלפפ</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -8662,8 +8664,7 @@ Error message and password prompt
 </pre>
 </div>
 <div created="20170407125610504" modified="20170407130244169" title="אספרגוס">
-<pre>
-[img[pictures/asparagus.jpg]]
+<pre>[img[pictures/asparagus.jpg]]
 
 !!![[אווה]]:
 
@@ -9654,7 +9655,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170407130325995" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170407140335876" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9678,7 +9679,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[סלק מבושל]] - אווה  
 * [[אספרגוס]] - אווה 
 * [[סלט חסה]] - יויו 
-* סלט מלפפונים עם בצל סגול וכוסברה - יויו 
+* [[סלט מלפפונים עם בצל סגול ושמיר]] - יויו 
 * טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן - אווה 
 * עוגיות קימל - אווה 
 * תבשיל שורשים ואורז בשלושה צבעים -  אלפרד 
@@ -9774,7 +9775,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161114202954459" modified="20170405134607443" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20170407140420292" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אוה]]:
@@ -9783,7 +9784,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[כל המתכונים של ארוחת הכריסמס]]
 
-[[דןדן]] ו[[יויו]] חזרו מהשוק והמשכנו בהכנות לערב. יויו שולף בגאווה [[מתיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי לאפות. [[אירי]] התייצבה לידי ורצתה לדעת ולעשות אתי כל דבר. הכנו פאי דובדבנים, פאי פקאן עם קרמל ופאי אגסים עם קרם גבינה ושקדים. יויו הכין מרק כתום בסיר גדול ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. [[גורה]] ואירי הכינו אורז לבן עם צנוברים, מג'דרה, תפוחי אדמה ובטטות בתנור, פלפלים קלויים, סלט עדשים עם כוסברה ובצל קצוץ וסלט עגבניות עם שום. שתינו בירות ועשנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי שעועית ירוקה בחמאה ושום וסלק מבושל ואת האספרגוס. יויו הכין סלט חסה וסלט מלפפונים עם בצל סגול וכוסברה. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פרקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופזרו שתי כפות סוכר, ערבבו ופזרו אגוזי מלך קלויים. על משטח העבודה הבנים סידרו את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי טוסטים עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את עוגיות הקימל. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם אלבום של [[fela kuti|https://en.wikipedia.org/wiki/Fela_Kuti]]. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרביונים חומים, ואת עגילי הזהב התלויים הקבועים שלי אותם רכשתי לפני כמה שנים בחנות תכשיטים ליד השוק, בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. דןדן מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, גורה בחצאית כפלים מעל הברכיים בוורוד בהיר וגרביים גבוהות לבנות עד מעל לברכיים עליהן הדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. אירי בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה, ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. יויו דןדן וגורה מיד רצו לדלת. בדלת עמדו, [[אלפרד]] מחייך עם בובת סנטה קלאוס ענקית ביד שמאל וביד ימין אחז תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים. [[ג'וזף]] עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופרות יבשים. איתם [[דניאל]], בחור רזה בגובה בינוני, שמרכיב משקפי מתכת וחייכן. שיערו שחור ומסופר בתספורת קצרה חתוכה היטב, בידיו גרטן תפו&quot;א ויין ומאחור [[אנג'ליק]]. ג'ינג'ית יפה עם שער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית עם פחזניות ממולאות בכבד קצוץ, צנצנת עם חזרת, שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכל הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם [[סוניה]] ובעלה [[מרק]] הגיעו. סוניה לבושה שחור ושערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מידי. הם הביאו צלי בשר עם תפוחי אדמה, פנהטונה וריגו יאנצ'י. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. &quot;תודה רבה&quot;, הוא אמר לו, &quot;אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון&quot;. &quot;אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית&quot;, מרק ענה. בשמונה ורבע חמשת הסינים הגיעו ואחד מהם הביא אתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה אודות עובדי בניין סיניים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין, וגם לחמים וגבינות. גואן-יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] ו[[ראשל]]. היא הביאה תרנגול הודו אפוי, קוסקוס שיויו התחנן שתביא למרות הכול ועיגולי מרציפן. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד שציפו להכיר והתחברו אליו מיד. רוז'ה הגיע עם לזניה צמחונית וזר פרחים, וחברתו אנה שהביאה סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
+[[דןדן]] ו[[יויו]] חזרו מהשוק והמשכנו בהכנות לערב. יויו שולף בגאווה [[מתיק הגב|תיקי גב לקניות שדןדן ויויו הכינו]] חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי לאפות. [[אירי]] התייצבה לידי ורצתה לדעת ולעשות אתי כל דבר. הכנו פאי דובדבנים, פאי פקאן עם קרמל ופאי אגסים עם קרם גבינה ושקדים. יויו הכין מרק כתום בסיר גדול ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. [[גורה]] ואירי הכינו אורז לבן עם צנוברים, מג'דרה, תפוחי אדמה ובטטות בתנור, פלפלים קלויים, סלט עדשים עם כוסברה ובצל קצוץ וסלט עגבניות עם שום. שתינו בירות ועשנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי שעועית ירוקה בחמאה ושום וסלק מבושל ואת האספרגוס. יויו הכין סלט חסה וסלט מלפפונים עם בצל סגול ושמיר. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פרקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופזרו שתי כפות סוכר, ערבבו ופזרו אגוזי מלך קלויים. על משטח העבודה הבנים סידרו את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי טוסטים עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את עוגיות הקימל. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם אלבום של [[fela kuti|https://en.wikipedia.org/wiki/Fela_Kuti]]. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרביונים חומים, ואת עגילי הזהב התלויים הקבועים שלי אותם רכשתי לפני כמה שנים בחנות תכשיטים ליד השוק, בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. דןדן מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, גורה בחצאית כפלים מעל הברכיים בוורוד בהיר וגרביים גבוהות לבנות עד מעל לברכיים עליהן הדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. אירי בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה, ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. יויו דןדן וגורה מיד רצו לדלת. בדלת עמדו, [[אלפרד]] מחייך עם בובת סנטה קלאוס ענקית ביד שמאל וביד ימין אחז תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים. [[ג'וזף]] עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופרות יבשים. איתם [[דניאל]], בחור רזה בגובה בינוני, שמרכיב משקפי מתכת וחייכן. שיערו שחור ומסופר בתספורת קצרה חתוכה היטב, בידיו גרטן תפו&quot;א ויין ומאחור [[אנג'ליק]]. ג'ינג'ית יפה עם שער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית עם פחזניות ממולאות בכבד קצוץ, צנצנת עם חזרת, שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכל הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם [[סוניה]] ובעלה [[מרק]] הגיעו. סוניה לבושה שחור ושערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מידי. הם הביאו צלי בשר עם תפוחי אדמה, פנהטונה וריגו יאנצ'י. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. &quot;תודה רבה&quot;, הוא אמר לו, &quot;אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון&quot;. &quot;אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית&quot;, מרק ענה. בשמונה ורבע חמשת הסינים הגיעו ואחד מהם הביא אתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] ו[[צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה אודות עובדי בניין סיניים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין, וגם לחמים וגבינות. גואן-יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] ו[[ראשל]]. היא הביאה תרנגול הודו אפוי, קוסקוס שיויו התחנן שתביא למרות הכול ועיגולי מרציפן. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד שציפו להכיר והתחברו אליו מיד. רוז'ה הגיע עם לזניה צמחונית וזר פרחים, וחברתו אנה שהביאה סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
 כבר היה רבע לתשע. דןדן ואני שטפנו את הכלים שהיו בכיור.
 &quot;כולם כאן חוץ מהדוקטור&quot;. יויו אמר בקול ובו ברגע נשמע צלצול בדלת. סיימנו לשטוף את הכלים שנינו. מזגנו לעצמנו בחרובקה והקשנו כוס לכוס. 
 בלגימה אני שומעת קול קורא, &quot;אווה&quot;. אני בולעת את המשקה, לא בטוחה למשמע הקול. אני מסיימת את הבליעה ומרימה את הראש, זה [[פיליפ]]. ראשו מוטה אלי, רעמתו נשואה לאחור, ידיו מופנות לפנים בלי תנועה, פניו אדומים. &quot;אווה&quot; הוא שוב אומר בקול, מניע את ידיו והולך לקראתי. כמעט נפלתי אבל דןדן החזיק אותי. &quot;פיליפ&quot;, אמרתי בלי קול. הוא הגיע עד אלי והושיט לי את ידיו. לא הצלחתי לזוז. יויו ואירי באו גם הם להחזיק אותי.
@@ -10464,8 +10465,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
 <div created="20170407131936343" modified="20170407134650524" title="סלט חסה">
-<pre>
-[img[pictures/salat-chasa.jpg]]
+<pre>[img[pictures/salat-chasa.jpg]]
 
 !!![[יויו]]:
 
@@ -10479,6 +10479,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מוזגים מעל שמן זית (כמה כפות), חומץ תפוחים (כפית) ומלח גס (קורט), מערבבים עם כפות הידיים בעדינות מהצדדים פנימה ומגישים.
 </pre>
+</div>
+<div created="20170407140441796" modified="20170407143300549" title="סלט מלפפונים עם בצל סגול ושמיר">
+<pre>
+[img[pictures/salat-melafefonim.jpg]]
+
+!!![[יויו]]:
+
+* פורסים שלושה-ארבעה מלפפונים לפרוסות עבות.
+* פורסים בצל קטן סגול לפרוסות דקות, ומפרקים אותו מעל.
+* קוצצים חופן שמיר ומפזרים מעל
+* בקערה קטנה מערבבים: רבע כוס שמן זית, כפית סוכר, כף חומץ, קורט מלח, קורט פלפל שחור ויוצקים מעל.
+* מערבבים מהחוץ לפנים ומגישים.</pre>
 </div>
 <div created="20170406150319861" modified="20170406151310640" title="סלט עגבניות עם שום">
 <pre>[img[pictures/salat-agvanyot.jpg]]
@@ -10531,8 +10543,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170407122044551" modified="20170407123359731" title="סלק מבושל">
-<pre>
-[img[pictures/selek.jpg]]
+<pre>[img[pictures/selek.jpg]]
 
 !!![[אווה]]:
 
