--- a/index.html
+++ b/index.html
@@ -421,8 +421,6 @@ Error message and password prompt
 
 <li>קואנג</li>
 
-<li>קומה אחת</li>
-
 <li>קפה מילר</li>
 
 <li>קרן</li>
@@ -8272,7 +8270,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[סלט מלפפונים עם בצל סגול ושמיר]] [[סלט מלפפונים עם בצל סגול וכוסברה]] [[סלט חסה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8292,8 +8290,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170407140308996" title="$:/temp/search">
-<pre>סלט מלפפ</pre>
+<div created="20161023184814872" modified="20170407143438390" title="$:/temp/search">
+<pre>קומה אחת</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -9655,7 +9653,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170407140335876" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170407143913441" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9680,7 +9678,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[אספרגוס]] - אווה 
 * [[סלט חסה]] - יויו 
 * [[סלט מלפפונים עם בצל סגול ושמיר]] - יויו 
-* טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן - אווה 
+* [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
 * עוגיות קימל - אווה 
 * תבשיל שורשים ואורז בשלושה צבעים -  אלפרד 
 * מלפפונים חמוצים - אלפרד 
@@ -10743,9 +10741,6 @@ Fapina''
 
 קואנג בסינית זה היקום.
 </pre>
-</div>
-<div created="20170120152453009" modified="20170120152453009" title="קומה אחת">
-<pre></pre>
 </div>
 <div created="20170119232802609" modified="20170320182321883" title="קפה מילר">
 <pre>[img[pictures/zGhVc9HucPGCaiKJ.jpg]]
