--- a/index.html
+++ b/index.html
@@ -335,6 +335,8 @@ Error message and password prompt
 
 <li>ז'נבייב</li>
 
+<li>טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן</li>
+
 <li>יויו</li>
 
 <li>ים טתיס</li>
@@ -8270,7 +8272,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8290,8 +8292,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170407143438390" title="$:/temp/search">
-<pre>קומה אחת</pre>
+<div created="20161023184814872" modified="20170407144029191" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -9615,6 +9617,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא חתולה יפה שמשפחתה היגרה ממרוקו לפריז.
 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
+</div>
+<div created="20170407152300115" modified="20170407153246036" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
+<pre>
+[img[pictures/tost.jpg]]
+
+!!![[אווה]]:
+
+* פורסים זוקיני למלבנים, קורעים עלי כרוב, מניחים אותם בתבנית מרופדת בנייר אפייה, מתבלים בשמן זית ומלח גס, ואופים בתנור שחומם מראש ל190 מעלות צלזיוס עד התרככותם והזהבתם.
+* מרסקים עבנייה על פומפיה ומערבבים לתוכה כמה גרגרי מלח.
+* קולים פרוסות לחם בתנור עד לגוון הרצוי.
+* מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
 </div>
 <div created="20161026214908307" modified="20170401202755620" tags="[[נאמני הגנזך]]" title="יויו">
 <pre>!!![[אירי]]:
