--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@ Error message and password prompt
 
 <li>סלק מבושל</li>
 
+<li>עוגיות קימל</li>
+
 <li>עורכת הדין</li>
 
 <li>עץ המשפחה של אווה</li>
@@ -8272,7 +8274,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[עוגיות קימל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9619,8 +9621,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
 <div created="20170407152300115" modified="20170407153246036" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
-<pre>
-[img[pictures/tost.jpg]]
+<pre>[img[pictures/tost.jpg]]
 
 !!![[אווה]]:
 
@@ -9666,7 +9667,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170407143913441" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170407191852925" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9692,7 +9693,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[סלט חסה]] - יויו 
 * [[סלט מלפפונים עם בצל סגול ושמיר]] - יויו 
 * [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
-* עוגיות קימל - אווה 
+* [[עוגיות קימל]] - אווה 
 * תבשיל שורשים ואורז בשלושה צבעים -  אלפרד 
 * מלפפונים חמוצים - אלפרד 
 * גרטן תפו&quot;א - דניאל  
@@ -10492,8 +10493,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20170407140441796" modified="20170407143300549" title="סלט מלפפונים עם בצל סגול ושמיר">
-<pre>
-[img[pictures/salat-melafefonim.jpg]]
+<pre>[img[pictures/salat-melafefonim.jpg]]
 
 !!![[יויו]]:
 
@@ -10567,6 +10567,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * חותכים לפלחים.
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
+</div>
+<div created="20170407192128538" modified="20170407192224943" title="עוגיות קימל">
+<pre>
+[img[pictures/ugiyot-kimel.jpg]]
+
+!!![[אווה]]:
+
+</pre>
 </div>
 <div created="20170319172108447" modified="20170319172332136" title="עורכת הדין">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
