--- a/index.html
+++ b/index.html
@@ -453,6 +453,8 @@ Error message and password prompt
 
 <li>שרלה הייתה אוהבת את זה</li>
 
+<li>תבשיל שורשים ואורז בשלושה צבעים</li>
+
 <li>תומר</li>
 
 <li>תיקי גב לקניות שדןדן ויויו הכינו</li>
@@ -8274,7 +8276,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[עוגיות קימל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[עוגיות קימל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9667,7 +9669,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170407191852925" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170408231322414" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9694,7 +9696,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[סלט מלפפונים עם בצל סגול ושמיר]] - יויו 
 * [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
 * [[עוגיות קימל]] - אווה 
-* תבשיל שורשים ואורז בשלושה צבעים -  אלפרד 
+* [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
 * מלפפונים חמוצים - אלפרד 
 * גרטן תפו&quot;א - דניאל  
 * פחזניות ממולאות בכבד קצוץ - אנג'ליק 
@@ -10568,11 +10570,34 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
-<div created="20170407192128538" modified="20170407192224943" title="עוגיות קימל">
-<pre>
-[img[pictures/ugiyot-kimel.jpg]]
+<div created="20170407192128538" modified="20170408225843404" title="עוגיות קימל">
+<pre>[img[pictures/ugiyot-kimel.jpg]]
 
 !!![[אווה]]:
+
+לפני ההכנה:
+כדי שבצק  יצא פריך, כדאי לשמור שהחמאה תהיה קרה, ובכלל -טמפרטורה נמוכה תמיד עדיפה במטבח - ולעבד מעט ככל האפשר.
+
+מחממים את התנור ל-170 מעלות צלזיוס.
+
+מכינים בצק פריך מ:
+
+350 גרם קמח
+
+200 גרם חמאה קרה חתוכה לקוביות
+
+גביע שמנת חמוצה
+
+* במעבד מזון עם להב הפלדה, או במערבל חשמלי עם וו הגיטרה מערבלים, ומכבים מיד עם קבלת כדור בצק אחיד.
+* מוציאים את כדור הבצק אל משטח העבודה.
+* לקמח הכי מעט שאפשר - הבצק אמור לצאת חלק ונח לעבודה.
+* משטחים מעט את הבצק, מפזרים מעליו כף מלח ושתי כפות זרעי קימל, ולשים אותם פנימה בכמה פעמים.
+* משטחים בתבנית קטנה את הבצק למשטח בגובה סנטימטר, מסמנים בעדינות קוביות לאורך ולרוחב (רק לסמן, לא עד הסוף!). 
+* אופים 20-25 דקות - עד להזהבה קלה, ומוציאים מהתנור.
+* כמה דקות לאחר ההוצאה מהתנור, מעבירים סכין חדה וחלקה לאורך החריצים המסומנים, ונותנים לעוגיות להתקרר.
+* אפשר לאכול מיד, או לאפסן בכלי אטום כמה ימים.
+
+
 
 </pre>
 </div>
@@ -11137,6 +11162,13 @@ Fapina''
 העשב נוצץ.
 שד מתרוצץ.
 הרוח בעץ.
+</pre>
+</div>
+<div created="20170408234445334" modified="20170408234613856" title="תבשיל שורשים ואורז בשלושה צבעים">
+<pre>[img[pictures/orez-bishlosha.jpg]]
+
+!!![[אלפרד]]:
+
 </pre>
 </div>
 <div created="20170401223255295" modified="20170401235829252" title="תומר">
