--- a/index.html
+++ b/index.html
@@ -8276,7 +8276,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] [[תבשיל שורשים ואורז בשלושה צבעים]] [[עוגיות קימל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[תבשיל שורשים ואורז בשלושה צבעים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11164,10 +11164,19 @@ Fapina''
 הרוח בעץ.
 </pre>
 </div>
-<div created="20170408234445334" modified="20170408234613856" title="תבשיל שורשים ואורז בשלושה צבעים">
+<div created="20170408234445334" modified="20170409063342489" title="תבשיל שורשים ואורז בשלושה צבעים">
 <pre>[img[pictures/orez-bishlosha.jpg]]
 
 !!![[אלפרד]]:
+
+* משרים כוס אורז בשלושה צבעים לשעתיים לפחות.
+(יש חבילות עם שלושתם - או לפי משקל: אורז עגול, אורז אדום ואורז בר).
+* מסננים את האורז, קוצצים בצל, קולפים בטטה ושני גזרים.
+* בסיר רחב יחסית, מתחילים לטגן את הבצל בתוך שתי כפות שמן עד להזהבה.
+* מכניסים פנימה את הבטטה והגזרים וצולים עוד.
+* מוסיפים את האורז ומטגנים עוד מעט.
+* מוסיפים שתי כוסות מים ןמתבלים במלח, פלפל שחור, כף חומץ רימונים, כף-שתיים סויה, כף טריאקי, מעט בהרט.
+* מבשלים על אש נמוכה ובודקים מידי פעם את מצב המים - מוסיפים רקלגובה האורז ולא יותר עד עשרים דקות לפני הסוף ובעשרים הדקות האחרונות מבשלים עד שהמים מתכלים.
 
 </pre>
 </div>
