--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>מיזונפלציה</li>
 
+<li>מלפפונים חמוצים</li>
+
 <li>מנקים היטב</li>
 
 <li>מערכת העיתון</li>
@@ -8276,7 +8278,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[תבשיל שורשים ואורז בשלושה צבעים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מלפפונים חמוצים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9669,7 +9671,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170408231322414" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170409072011941" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
 
 
@@ -9697,7 +9699,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] - אווה 
 * [[עוגיות קימל]] - אווה 
 * [[תבשיל שורשים ואורז בשלושה צבעים]] -  אלפרד 
-* מלפפונים חמוצים - אלפרד 
+* [[מלפפונים חמוצים]] - אלפרד 
 * גרטן תפו&quot;א - דניאל  
 * פחזניות ממולאות בכבד קצוץ - אנג'ליק 
 * צנצנת עם חזרת - אנג'ליק
@@ -10357,6 +10359,36 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כלומר, מה שאני מנסה לומר הוא - שכאשר הגעתי לעבודה אצל ז'נבייב, והיא אמרה לי, שמה שהיא רוצה ממני זה עזרה במיז-און-פלאס, חיברתי את המילים והבנתי את מה שהיא אמרה.
 
 
+
+</pre>
+</div>
+<div created="20170409072116141" modified="20170409181758192" title="מלפפונים חמוצים">
+<pre>
+[img[pictures/melafefonim-chamuzim.jpg]]
+
+!!![[אלפרד]]:
+
+כשהייתי בכיתה ה' אולי, הייתה לי חברה שמאד אהבתי, ואימא שלה הייתה מכינה את המלפפונים החמוצים הכי טעימים מאז ולעולם.
+
+לקחתי ממנה אז את המתכון (כן,כן), ואני מכין עד היום בכל הזדמנות.
+
+לפני כל דבר מהבחינה הזו - החשוב ביותר הוא שהמלפפונים יהיו טריים, קשים ולא גדולים.
+
+קילו מלפפונים קטנים וקשים
+פלפל חריף ירוק חתוך לחתיכות בגודל 3 סנטימטרים
+צרור שמיר
+8-10 שיני שום, פרוסות
+4 כוסות מים
+4 כפיות מלח גס
+
+
+לתוך צנצנת 2 ליטר:
+
+1. שמים בתחתית הצנצנת חצי מכמות השמיר, ומפזרים חצי מכמות השום..
+2. ומערבבים את המים עם מלח.
+3. מסדרים את המלפפונים בצנצנת כך שהם עומדים צפופים, מפזרים את שאר השום ופלפל החריף, דוחסים את השמיר בין לבין, ומעל ויוצקים את המים והחומץ, שיכסו את הכל. סוגרים ואוטמים, ומניחים במקום עם הרבה אור (זה מאיץ את הכבישה).
+
+אני אוהבת את המלפפונים כבר אחרי יום- יום וחצי אבל זה לוקח כמה ימים, ורגע לפני שהם מגיעים לצבע הרצוי מכניסים למקרר כך שהתהליך יואט מאד.
 
 </pre>
 </div>
